--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "start:dev": "nodemon index"
+    "start": "node index & (cd client && yarn start) ",
+    "server": "nodemon index",
+    "import:data": "node util/seederScript"
   },
   "author": "Tanguy Clarence <tanguy.clarence@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-server": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.5",
     "validator": "^13.6.0"
   },
